test: 공연장, 공연 테스트 데이터 세팅